Lib/doctest.py
@@ -481,9 +481,6 @@ class Example:
                self.options == other.options and \
                self.exc_msg == other.exc_msg
 
-    def __ne__(self, other):
-        return not self == other
-
     def __hash__(self):
         return hash((self.source, self.want, self.lineno, self.indent,
                      self.exc_msg))
@@ -546,9 +543,6 @@ class DocTest:
                self.name == other.name and \
                self.filename == other.filename and \
                self.lineno == other.lineno
-
-    def __ne__(self, other):
-        return not self == other
 
     def __hash__(self):
         return hash((self.docstring, self.name, self.filename, self.lineno))
@@ -2288,9 +2282,6 @@ class DocTestCase(unittest.TestCase):
                self._dt_setUp == other._dt_setUp and \
                self._dt_tearDown == other._dt_tearDown and \
                self._dt_checker == other._dt_checker
-
-    def __ne__(self, other):
-        return not self == other
 
     def __hash__(self):
         return hash((self._dt_optionflags, self._dt_setUp, self._dt_tearDown,
